# codebloom

./: .dockerignore  .editorconfig  .env.ci  .env.ci-app  .env.example  .env.example.ci  .env.example.production  .env.example.staging  .env.migrator  .env.production  .env.production-ro  .env.shared  .env.staging  .git-blame-ignore-revs  .gitattributes  .gitignore  .lazy.lua  .nvim.lua  .pr_agent.toml  .prettierrc  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Justfile  LICENSE  Makefile  README.md  STYLEGUIDE.md  checkstyle.xml  codecov.yml  dummy.txt  dump.rdb  email.sh  example.env  example.env.ci  example.env.ci-app  example.env.migrator  example.env.production  example.env.production-ro  example.env.staging  (+10 more)
.do/: README.md  specs.ts
.github/: READMEFIRST.md  pull_request_template.md
db/: README.md
docs/: QUICK-LINKS.md  auth.md  autoformatters.md  emails.md  frontend.md  local-database.md  migrations.md
e2e/: .gitignore  README.md  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml
email/: README.md  email.md  email.sh  package.json  pnpm-lock.yaml
internal/standup-bot/: .env.production  Cargo.toml  Dockerfile  README.md  example.env.production  rustfmt.toml
internal/standup-bot/src/: main.rs  utils.rs
internal/standup-bot/src/discord/: client.rs  credentials.rs  handlers.rs  mod.rs
internal/standup-bot/src/discord/commands/: hello.rs
internal/standup-bot/src/redis/: client.rs  credentials.rs  error.rs  mod.rs
internal/standup-bot/src/utils/: mod.rs  standup.rs
internal/standup-bot/src/utils/latch/: base.rs  error.rs  mod.rs
(+1718 files in other folders)
