[package]
name = "codebloom-standup-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
redis = { version = "1.0.3", features = ["tokio-comp", "connection-manager"] }
chrono = "0.4.43"
chrono-tz = "0.10.4"
